--- a/Assignment_2_paolo.ipynb
+++ b/Assignment_2_paolo.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "# separate the df_features (X) and labels (y) to train and test the model\n",
     "X = df_features.drop('label', axis=1)\n",
-    "y = df_features['label']\n"
+    "y = df_features['label']"
    ]
   },
   {
